# contract-analyzer-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_BUGS.md.bak  ARCHITECTURE_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.streamlit  LICENSE  Makefile  PUBLIC_URLS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  report.md.bak  requirements-dev.txt  requirements-streamlit.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: config.py  evaluation.py  generation.py  ingestion.py  main.py  models.py  retrieval.py
data/: eval_questions.json  metrics.json
docs/: CHANGELOG.md  QA_AUDIT_REPORT.md
docs_html/: bugs.html  changelog.html  index.html  qa_audit.html
frontend/: streamlit_app.py  utils.py
frontend/.streamlit/: config.toml
tests/: conftest.py  test_api.py  test_evaluation.py  test_generation.py  test_ingestion.py  test_models.py  test_retrieval.py  test_security.py  test_stability.py
