[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-analyzer-ai"
version = "1.0.0"
description = "Hybrid RAG-based contract analysis service with GigaChat"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["rag", "contract-analysis", "gigachat", "fastapi", "qdrant", "langchain", "nlp"]
authors = [
    {name = "Contract Analyzer AI Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/your-username/contract-analyzer-ai"
Repository = "https://github.com/your-username/contract-analyzer-ai"
Documentation = "https://github.com/your-username/contract-analyzer-ai#readme"
"Bug Tracker" = "https://github.com/your-username/contract-analyzer-ai/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "deepeval>=1.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pre-commit>=3.0.0",
]
streamlit = [
    "streamlit>=1.28.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
